peless (1.252-2) unstable; urgency=low

  * convert to "3.0 (quilt)" or "3.0 (native)"

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Fri, 11 May 2012 19:47:27 -0500

peless (1.252-0ubuntu1) natty; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Tue, 08 May 2012 11:28:07 -0500

peless (1.243-0ubuntu1) natty; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@blackpatchpanel.com>  Fri, 04 May 2012 16:10:54 -0500

peless (1.223-1) unstable; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Thu, 04 Nov 2010 22:06:08 -0500

peless (1.221-1) unstable; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Tue, 02 Mar 2010 21:43:25 -0600

peless (1.211-1) unstable; urgency=low

  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Thu, 21 Jan 2010 00:18:42 -0600

peless (1.199-1) unstable; urgency=low

  * add intltool to Build-depends:  because of complex problem
  * New upstream release

 -- Paul Elliott <pelliott@BlackPatchPanel.com>  Sat, 15 Aug 2009 00:29:42 -0500

peless (1.193-1) unstable; urgency=low

  * New upstream release
  * add g++ to Build-Depends: of control. resolves libstdc++ ambigutities in opensuse-buildservice

 -- Paul Elliott <pelliott@hrnowl.lug.local>  Tue, 27 Jan 2009 14:25:39 -0600

peless (1.156-2) unstable; urgency=low

  * Debian/menu changed to accord for new Applications menu
  * Debian/copyright coorected with addition of the licence path
  * dh_installdirs removed from debian/rules
  * README added with dh_installdocs 

 -- Giorgio Pioda <gfwp@ticino.com>  Tue, 18 Sep 2007 14:20:16 +0200

peless (1.156-1) unstable; urgency=low

  * New upstream release
  * $(BOOST) corrected for the new libboost-1.34
  * -(MAKE) distclean modified according to lintian

 -- Giorgio Pioda <gfwp@ticino.com>  Thu, 13 Sep 2007 11:12:41 +0200

peless (1.145-1) unstable; urgency=low
