@@ -1,73 +1,15 @@
 #!/usr/bin/make -f
 
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
 #BOOST='mt'
-#BOOS='st'
+#BOOST='st'
 #In several systems the suffix needed to compile peless may vary; uncomment the suffix for your needs
 BOOST=''
 
-config.status: configure
-	dh_testdir
+%:
+	dh $@
 
-ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-	cp -f /usr/share/misc/config.sub config.sub
-endif
-ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-	cp -f /usr/share/misc/config.guess config.guess
-endif
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --with-boost-filesystem=$(BOOST) --with-boost-regex=$(BOOST) CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
+override_dh_auto_configure:
+	dh_auto_configure -- --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --with-boost-filesystem=$(BOOST) --with-boost-regex=$(BOOST) CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 
-
-build: build-stamp
-
-build-stamp:  config.status
-	dh_testdir
-	$(MAKE) CXXFLAGS="$(CFLAGS)"
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp 
-
-	[ ! -f Makefile ] || $(MAKE) distclean
-	rm -f config.sub config.guess
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	$(MAKE) DESTDIR=$(CURDIR)/debian/peless install
-
-# Build architecture-independent files here.
-binary-indep: build install
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
+override_dh_installchangelogs:
 	dh_installchangelogs ChangeLog
-	dh_installdocs README
-	dh_installmenu
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install 
